--- a/Project_CuisineDelight/Project_CuisineDelight/Web.config
+++ b/Project_CuisineDelight/Project_CuisineDelight/Web.config
@@ -108,6 +108,9 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=ASP-PROJECT-CUISINE-DELIGHT;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"/>
+    <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=ASP-PROJECT-CUISINE-DELIGHT;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+      providerName="System.Data.SqlClient" />
+    <add name="ASP-PROJECT-CUISINE-DELIGHTConnectionString1" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=ASP-PROJECT-CUISINE-DELIGHT;Integrated Security=True;Connect Timeout=30;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
